Update docs with query engine stack, metadata tagging architecture, and roadmap
New pages:
- architecture/query-engine.md: HMS-free Impala+Kudu stack with D2 diagrams
- architecture/meta-tagging.md: AI/ML classification pipeline via Atlas

Updated component pages (Kudu, Impala, Iceberg, Atlas) with current
status, service ports, and integration details. Roadmap rewritten with
near-term objectives: Iceberg via Polaris, Atlas integration, AI-driven
metadata tagging, and Ranger tag-based policies.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>